# Aeropulse

./: .TODO.tasks  .env.sample  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
etl/: download_city_list.py  extract_city_list.py
etl/load/: load_raw_cities.py
logs/: __main__
migrations/: env.py
migrations/versions/: 2cdce3d061e8_create_weather_res6_table.py  3a1_open_sky_states.py  3a2_weather_res6_history.py  3a3_flight_weather_hits.py  b5319c6acc2c_fix_add_h3_res6_to_cities_us_and_create_.py  fde418736eee_add_h3_res6_to_cities_us.py
src/aeropulse/: __init__.py
src/aeropulse/analytics/exports/: hourly_hits_to_parquet.py
src/aeropulse/analytics/plots/: last_hour_weather_mix.py
src/aeropulse/etl/: bootstrap_db.py  bootstrap_schema.sql
src/aeropulse/etl/export/: export_curated_to_parquet.py  visualize_weather_hits.py
src/aeropulse/etl/extract/: extract_city_list.py
src/aeropulse/etl/pipelines/: cleanup_mongo_weather.py  fetch_weather_to_mongo.py  full_refresh_dev.py  populate_flight_weather_hits.py  populate_weather_cells.py  sync_mongo_weather_to_postgres.py  (+1 more)
src/aeropulse/models/: __init__.py  city.py  mongo_index.py  weather_res6.py
src/aeropulse/services/: __init__.py  opensky_client.py  openweather_client.py
src/aeropulse/utils/: __init__.py  logging_config.py  parquet_io.py  rate_limit.py
src/etl/extract/: extract_city_list.py
src/etl/load/: load_cities_to_mongodb.py  load_raw_cities.py
src/models/: mongo-index.py
src/utils/: __init__.py  logging_config.py  mongo_loader.py
utils/: __init__.py  logging_config.py
(+21 files in other folders)
