[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Aeropulse"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "veziriii", email = "navid.vazirinasab@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
"requests",
"python-dotenv",
"pymongo",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "isort",
  "mypy",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"] 